Fix Registry page and some spacing on home page

--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,7 @@ h1 {
 }
 .event-info {
   display: grid;
+  grid-gap: 50px;
   grid-template-columns: 1fr 1fr;
 }
 
